<resources>
    <string name="app_name">Deezer</string>
    <string name="cover_image_view_content_description">Affiche l\'image de couverture de l\'album</string>
    <string name="artist_tv_placeholder">Artist</string>
    <string name="album_tv_placeholder">ALBUM NAME</string>
    <string name="explicit_album_text">(E)</string>
    <string name="album_release_placeholder">01/01/0101</string>
    <string name="song_name_placeholder">Song name</string>
    <string name="artist_name_placeholder">Artist 1 name</string>
    <string name="song_number_placeholder">1.</string>
    <string name="image_placeholder_for_sticky_bottom_bar">Image placeholder for sticky bottom bar</string>
    <string name="album_cover_placeholder">Album cover placeholder</string>
    <string name="album_name_placeholder">UNE MAIN LAVE L\'AUTRE</string>
    <string name="song_duration_placeholder">0:30</string>
    <string name="favorit_songe_song_icon">Favorit songe song icon</string>
    <string name="previous_song_icon">Previous song icon</string>
    <string name="pause_music_icon">Pause music icon</string>
    <string name="next_song_icon">Next song icon</string>
    <string name="album_cell_artist_name_placeholder">ALPHA WANN</string>
    <string name="single_text">Single</string>
    <string name="configuration_menu">Configuration</string>
    <string name="not_connected_bluetooth_tv">Not connected</string>
    <string name="config_btn">Configurer le volume</string>
    <string name="connected_indicator">Connected</string>
    <string name="not_connected_indicator">Not connected</string>
    <string name="indicative_text_tv">Referez-vous à l\'écran sur l\'enceinte</string>
    <string name="share_message_header">\nÉcoute ce son sur Deezer, il est vraiment super ! \n\n</string>
    <string name="deep_link_host">https://api.deezer.com</string>
    <string name="song_link">/%1$d/%2$d</string>
    <string name="share_message_content">Comment voulez-vous partager \"%1$s\" avec vos proche ?</string>
    <string name="shuffle">Shuffle</string>
    <string name="previous_song">Previous song</string>
    <string name="pause_play_song">Pause/Play song</string>
    <string name="next_song">Next song</string>
    <string name="loop">Loop</string>
    <string name="song_cover">Song cover</string>
    <string name="all_tracks_get_error">Une erreur est survenue !</string>
    <string name="indispo_album_error">Album momentanément indisponible</string>
    <string name="config_sent_message">Config envoyée!</string>

    <string name="template_time_less_ten">0:0%1$d</string>
    <string name="template_time_more_ten">0:%1$d</string>

</resources>
