<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:background="@color/dark">

    <ImageView
        android:id="@+id/bottom_sticky_bar_cover_iv"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/default_cover_art"
        android:contentDescription="@string/image_placeholder_for_sticky_bottom_bar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bottom_sticky_bar_song_tv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/song_name_placeholder"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/bottom_sticky_bar_artist_tv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/artist_name_placeholder"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">
        <ImageView
            android:id="@+id/bottom_sticky_bar_previous_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:src="@drawable/ic_previous_song_white"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/previous_song_icon"/>

        <ImageView
            android:id="@+id/bottom_sticky_bar_player_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:src="@drawable/ic_white_pause_48"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/pause_music_icon"/>

        <ImageView
            android:id="@+id/bottom_sticky_bar_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:src="@drawable/ic_next_song_white"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/next_song_icon"/>

    </LinearLayout>

</LinearLayout>