<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context="view.ui.MusicNavigationActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/music_nav_album_cover_iv"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/default_cover_art"
        android:contentDescription="@string/song_cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/music_nav_song_name_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/song_name_placeholder"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/music_nav_artst_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_tv_placeholder"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <SeekBar
            android:id="@+id/music_time_lapse_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_spent_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_duration_placeholder"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <Space
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0dp"/>

            <TextView
                android:id="@+id/time_left_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_duration_placeholder"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/shuffle_nav_music_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle"
            android:contentDescription="@string/shuffle" />
        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageView
            android:id="@+id/previous_nav_music_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_previous_music_nav"
            android:contentDescription="@string/previous_song"/>
        <Space
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageView
            android:id="@+id/play_music_nav_iv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_pause_notification_bar"
            android:contentDescription="@string/pause_play_song"/>

        <Space
            android:layout_weight="0.1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageView
            android:id="@+id/next_music_nav_iv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_next_music_nav"
            android:contentDescription="@string/next_song"/>

        <Space
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <ImageView
            android:id="@+id/repeat_music_nav_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repeat_unselected"
            android:contentDescription="@string/loop"/>

    </LinearLayout>

</LinearLayout>
