<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark">
    <ImageView
        android:id="@+id/album_cover_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/cover_image_view_content_description"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/artist_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/artist_tv_placeholder"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/album_cover_iv"
        app:layout_constraintStart_toStartOf="@+id/album_cover_iv"
        app:layout_constraintTop_toBottomOf="@+id/album_cover_iv" />

    <TextView
        android:id="@+id/album_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/album_tv_placeholder"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/artist_name_tv"
        app:layout_constraintStart_toStartOf="@+id/artist_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/artist_name_tv" />

    <TextView
        android:id="@+id/is_explicit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/explicit_album_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/album_name_tv"
        app:layout_constraintStart_toEndOf="@+id/album_name_tv"
        app:layout_constraintTop_toBottomOf="@+id/artist_name_tv" />

    <TextView
        android:id="@+id/album_release_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/album_release_placeholder"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/album_cover_iv"
        app:layout_constraintStart_toStartOf="@+id/album_cover_iv"
        app:layout_constraintTop_toBottomOf="@+id/album_name_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>