<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/song_pos_tv"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:text="@string/song_number_placeholder"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginStart="5dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_name_tv"
            android:layout_width="270dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/song_name_placeholder"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/artist_name_on_song_tv"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/artist_name_placeholder"
            android:textAlignment="textStart"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/song_duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginEnd="5dp"
            android:text="@string/song_duration_placeholder"
            android:textStyle="bold"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/ic_fav_unselected"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>

